# rustic-mountain

./: .gitignore  Cargo.toml  README.md  a.out  bmp2arr.py  test.c
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/me/coolelectronics/rusticceleste/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  rusticceleste.cpp
android/app/src/main/java/me/coolelectronics/rusticceleste/: MainActivity.java  PaintView.java  RusticFFI.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
androidbackup/app/: build.gradle
androidbackup/app/src/main/: AndroidManifest.xml
androidbackup/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  main.cpp
androidbackup/app/src/main/res/layout/: activity_main.xml
androidbackup/gradle/wrapper/: gradle-wrapper.properties
core/: Cargo.toml  README.md
core/src/: assign_skipped_consts.rs  lib.rs  memory.rs  objects.rs  small.lua  structures.rs  utils.rs
core/src/objects/: balloon.rs  bigchest.rs  chest.rs  fakewall.rs  fallfloor.rs  flag.rs  flyfruit.rs  fruit.rs  key.rs  lifeup.rs  message.rs  mod.rs  orb.rs  platform.rs  player.rs  playerspawn.rs  roomtitle.rs  smoke.rs  spring.rs  template.rs
librustic/: Cargo.toml
librustic/src/: lib.rs
standalone/: Cargo.toml
standalone/src/: consts.rs  main.rs
tuileste/: Cargo.toml
tuileste/src/: main.rs
web/: index.css  index.html  main.js
web/src/: lib.rs  test.rs
(+5 files in other folders)
