[package]
name = "rustic-mountain-core"
version = "0.1.0"
authors = ["coolelectronics <me@coolelectronics.me>"]
description = "A rust library for emulating the physics and graphics of the 2015 game jam release of Celeste Classic"
readme = "README.md"
homepage = "https://github.com/CoolElectronics/rustic-mountain"
repository = "https://github.com/CoolElectronics/rustic-mountain"
documentation = "https://github.com/CoolElectronics/rustic-mountain/blob/main/core/README.md"
edition = "2021"
workspace = "../"
license = "GPL-3.0-or-later"

[dependencies]
rand = {version= "0.8.5",features=["serde"]}
getrandom = {version = "0.2.10", features = ["js"]}
serde = {version = "1.0.174", features=["derive","rc"]}
serde_json = "1.0.103"
hex = "0.4.3"

[lib]
name = "rustic_mountain_core"
path = "src/lib.rs"
